Fixed sidebar length on mobile

--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -62,6 +62,7 @@ body {
 
         @media only screen and (max-width: 768px) {
             .sidebar {
+                min-height: 400px;
                 width: 100%;
 
                 .social-button-group {
